# GPU-Benchmark

./: ABSOLUTE_FINAL_TEST.cmd  ALL_8_ISSUES_FIXED.md  ARCHITECTURE.md  BUILD.cmd  BUILD_AND_RUN.md  BUILD_GUIDE.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION.md  COMPLETION_REPORT.md  COMPREHENSIVE_UPGRADE_PLAN.md  CRASH_ISSUE_FIXED.md  CURRENT_STATUS.md  DIRECTCOMPUTE_BACKEND_COMPLETE.md  DISTRIBUTION_PACKAGE.md  DOWNLOAD_IMGUI.cmd  FEATURES_COMPLETED.md  FINAL_ICON_FIX_SUMMARY.txt  FINAL_STATUS_AND_TESTING.md  FIXES_COMPLETED_ROUND2.md  FRESH_START_WITH_VS2022.md  GUI_DEVELOPMENT_PLAN.md  ICON_FIX_COMPLETE.md  LAUNCH_GUI_SIMPLE.cmd  MILESTONE_ACHIEVED.md  OPENCL_CRASH_DIAGNOSIS.md  OPENCL_CRASH_FIXED.md  OPENCL_FIX_APPLIED.md  PATH_TO_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_TESTING.txt  README.md  READY_TO_USE.md  RESULTS_INTERPRETATION.md  RUN_ALL_TESTS.cmd  RUN_ALL_TESTS.md  SECOND_RUN_CRASH_FIXED.md  SETUP_IMGUI_MANUAL.md  START_HERE.md  TEST_ALL_8_FIXES.cmd  (+22 more)
docs/: API_REFERENCES.md  GETTING_STARTED.md  INTERNAL_WORKINGS.md  ORGANIZATION_COMPLETE.txt  README.md  README_ORGANIZATION.md  REPOSITORY_STRUCTURE.md  WHY_THIS_PROJECT.md
docs/bug-fixes/: CUDA_CRASH_FIX.md  ENHANCED_GUI_COMPLETE.md  GUI_TROUBLESHOOTING.md  URGENT_FIX_SUMMARY.txt
docs/build-setup/: BUILD_AND_RUN_MAIN.md  QUICK_REBUILD.md  START_DEVELOPMENT.md  STATUS_AND_SETUP.md
docs/dev-progress/: ADDING_ALL_FEATURES_NOW.md  ALL_TODOS_COMPLETE.md  ALL_TODOS_COMPLETE_V2.md  COMPLETION_STATUS_AND_PLAN.md  CURRENT_STATE_AND_NEXT_STEPS.md  CURRENT_STATUS_FINAL.md  DEVELOPMENT_PROGRESS.md  FINAL_COMPLETE_STATUS.md  GUI_APPLICATION_COMPLETE.md  GUI_NOW_WORKS.md  GUI_V2_COMPLETE.md  OPENCL_BACKEND_COMPLETE.md  PHASE_3_OPTIONS.md  PROJECT_COMPLETE_SUMMARY.md
docs/user-guides/: HOW_TO_USE_GUI.md  PATH_TO_COMPLETION.md  README_DISTRIBUTION.md
release/: FINAL_STEPS.md  ICON_INTEGRATION_GUIDE.md  PRODUCTION_READY_v1.0.txt  QUICK_STATUS.txt  README.md  RELEASE_v1.0_READY.md
results/: README.md
scripts/: README.md  SHOW_STRUCTURE.cmd
scripts/launch/: LAUNCH_GUI.cmd  RUN_GUI.cmd  RUN_MAIN_APP.cmd
src/: cuda_stub.cu  main.cpp  main_working.cpp  simple_benchmark.cpp  simple_benchmark.h
src/backends/cuda/: CUDABackend.cpp  CUDABackend.h  README.md
src/backends/cuda/kernels/: convolution.cu  matrix_mul.cu  reduction.cu  vector_add.cu
src/backends/directcompute/: DirectComputeBackend.cpp  DirectComputeBackend.h
src/backends/directcompute/shaders/: convolution.hlsl  matrix_mul.hlsl  reduction.hlsl  vector_add.hlsl
src/backends/opencl/: KernelLoader.h  OpenCLBackend.cpp  OpenCLBackend.h
src/backends/opencl/kernels/: convolution.cl  matrix_mul.cl  reduction.cl  vector_add.cl
src/benchmarks/: ConvolutionBenchmark.cpp  ConvolutionBenchmark.h  MatrixMulBenchmark.cpp  MatrixMulBenchmark.h  ReductionBenchmark.cpp  ReductionBenchmark.h  VectorAddBenchmark.cpp  VectorAddBenchmark.h
src/core/: BenchmarkRunner.cpp  BenchmarkRunner.h  DeviceDiscovery.cpp  DeviceDiscovery.h  IComputeBackend.h  Logger.cpp  Logger.h  README.md  Timer.cpp  Timer.h
src/gui/: additional_benchmarks.hpp  app.rc  main_gui.cpp  main_gui_complete.cpp  main_gui_comprehensive.cpp  main_gui_fixed.cpp
tests/: README.md
tests/test-scripts/: FINAL_TEST.cmd  TEST_ALL_FEATURES.cmd  TEST_FIXED_CLI.cmd  TEST_GUI_NOW.cmd  TEST_ICON_FIX.cmd  TEST_OPENCL_FIX.cmd  TEST_OPENCL_FIXED_GUI.cmd  TEST_SECOND_RUN_FIX.cmd
tests/unit-tests/: test_convolution.cu  test_cuda_backend.cu  test_directcompute_backend.cpp  test_logger.cpp  test_opencl_stub.cu  test_reduction.cu
